--- a/doc_pro.html
+++ b/doc_pro.html
@@ -24,7 +24,7 @@
             </nav>
         </div>
     </section>
-    <div class="bgimg"><img src="../logos/page3.png" width="100%" height="100%" style="position: relative;" alt=""></div>
+    <div class="bgimg"><img src="./logos/page3.png" width="100%" height="100%" style="position: relative;" alt=""></div>
     <button class="btn1">Book your appointment</button><button class="btn2">Chat with doctor</button>
     <section class="footer">
         <div class="sec">        
