--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="section1" id="section1">
         <div class="rightbox"
             style="    width: 800px; background-color: #27616E;
-    height: 680px; background-image: url('../logos/WhatsApp_Image_2024-04-27_at_21.07.03-removebg-preview\ \(1\).png');background-position: center;background-repeat: no-repeat;">
+    height: 680px; background-image: url('./logos/WhatsApp_Image_2024-04-27_at_21.07.03-removebg-preview\ \(1\).png');background-position: center;background-repeat: no-repeat;">
         </div>
         <div class="leftbox" style="width: 60%">
             <h2>CONNECT WITH TOP RATED DOCTORS IN JUST FEW CLICKS!</h2>
@@ -52,12 +52,12 @@
                     </h5>
             </div>
             <div class="topic" id="circleshape1" style="display: flex;">
-                <img src="../logos/skinproblem-removebg-preview-modifiedcircle.png" alt="alt" width="100px "
+                <img src="./logos/skinproblem-removebg-preview-modifiedcircle.png" alt="alt" width="100px "
                     height="100px">
-                <img src="../logos/pregnancyimg-modified.png" width="100px" height="100px" alt="">
-                <img src="../logos/depression-modified.png" width="100px" height="100px">
-                <img src="../logos/pediatrition-modified.png" width="100px" height="100px">
-                <img src="../logos/coughcold-modified.png" width="100px" height="100px">
+                <img src="./logos/pregnancyimg-modified.png" width="100px" height="100px" alt="">
+                <img src="./logos/depression-modified.png" width="100px" height="100px">
+                <img src="./logos/pediatrition-modified.png" width="100px" height="100px">
+                <img src="./logos/coughcold-modified.png" width="100px" height="100px">
             </div>
             <div class="topic" id="rectangleshapetext">
                 <span class="skinproblem">Skinproblem</span><span class="Preganancy">Preganancy</span><span
@@ -69,16 +69,16 @@
     </section>
     <section class="howitworks" style="display: flex; justify-content: space-around; align-items: centre;">
         <div class="circle1" style="width: 100px; height: 100px; border: 1px solid rgba(0, 0, 0); border-radius: 50%;">
-            <img src="../logos/findyourdoc.png" width="100px" height="100px">
+            <img src="./logos/findyourdoc.png" width="100px" height="100px">
         </div>
         <div class="circle2" style="width: 100px; height: 100px; border: 1px solid rgba(0, 0, 0); border-radius: 50%;">
-            <img src="../logos/location.png" width="100px" height="100px">
+            <img src="./logos/location.png" width="100px" height="100px">
         </div>
         <div class="circle3" style="width: 100px; height: 100px; border: 1px solid rgba(0, 0, 0); border-radius: 50%;">
-            <img src="../logos/freetimeslot.png" width="100px" height="100px" alt="">
+            <img src="./logos/freetimeslot.png" width="100px" height="100px" alt="">
         </div>
         <div class="circle4" style="width: 100px; height: 100px; border: 1px solid rgba(0, 0, 0); border-radius: 50%;">
-            <img src="../logos/getsolution.png" width="100px" height="100px" alt="">
+            <img src="./logos/getsolution.png" width="100px" height="100px" alt="">
         </div>
     </section>
     <h5 style="position: relative;bottom: 200px;right: -650px; font-size: 35px;width: 201px;">How it works</h5>
@@ -98,7 +98,7 @@
         <div class="textcontent4" style="width:190px; position:relative;right: -18px;top: 5px;">We can hold an appointment
             <span style="position: relative;left: 25px;">either on video or chat</span></div>
     </section>
-    <section class="lastsection"><div class="biggerbox"><img src="../logos/lastsectionpg.png" width="1300px" style="position: relative;top: 47px;left: 100px; margin-bottom: -100px;" height="auto">
+    <section class="lastsection"><div class="biggerbox"><img src="./logos/lastsectionpg.png" width="1300px" style="position: relative;top: 47px;left: 100px; margin-bottom: -100px;" height="auto">
         <button class="btn5"><A href="appointment.html">Book Your Appointment Now</A></button>
     </section>
     <section class="footer">
