--- a/medicines.html
+++ b/medicines.html
@@ -34,7 +34,7 @@
                     <h1>medical stores. </h1>
                 </div>
                 <div class="pic">
-                    <img src="../Photos/MED-removebg-preview.png" alt="pic">
+                    <img src="./Photos/MED-removebg-preview.png" alt="pic">
                 </div>
             </div>
             
@@ -47,7 +47,7 @@
         <tr>
             <th>
                 <div class="med1">
-                    <img src="../Photos/Screenshot 2024-04-28 131751.png" alt="" >
+                    <img src="./Photos/Screenshot 2024-04-28 131751.png" alt="" >
                     <div class="meddata">
                         <div><a href="skincare.html"><h3>Skin Care</h3></a></div>
                     </div>
@@ -55,7 +55,7 @@
             </th>
             <th>
                 <div class="med1">
-                    <img src="../Photos/pain.png" alt="">
+                    <img src="./Photos/pain.png" alt="">
                     <div class="meddata">
                         <div><a href="painrelief.html"><h3>Pain Relief</h3></a></div>
                     </div>
@@ -63,7 +63,7 @@
             </th>
             <th>
                 <div class="med1">
-                    <img src="../Photos/heart.png" alt="">
+                    <img src="./Photos/heart.png" alt="">
                     <div class="meddata">
                         <div><a href="hearthealth.html"><h3>Heart Health</h3></a></div>
                     </div>
@@ -73,7 +73,7 @@
         <tr>
             <th>
                 <div class="med1">
-                    <img src="../Photos/cough.png" alt="">
+                    <img src="./Photos/cough.png" alt="">
                     <div class="meddata">
                         <div><a href="cough.html"><h3>Cough and Cold</h3></a></div>
                     </div>
@@ -81,7 +81,7 @@
             </th>
             <th>
                 <div class="med1">
-                    <img src="../Photos/diab.png" alt="">
+                    <img src="./Photos/diab.png" alt="">
                     <div class="meddata">
                         <div><a href="diabetes.html"><h3>Diabetes Care</h3></a></div>
                     </div>
@@ -89,7 +89,7 @@
             </th>
             <th>
                 <div class="med1">
-                    <img src="../Photos/baby.png" alt="">
+                    <img src="./Photos/baby.png" alt="">
                     <div class="meddata">
                         <div><a href="babycare.html"><h3>Baby Care</h3></a></div>
                     </div>
@@ -103,16 +103,16 @@
     <div class="box1">
         <div class="home"><a href="">Chat with a</a></div>
         <div class="hrs"><a href="">Doctor</a></div>
-    <img src="../Photos/chatw-removebg-preview.png" alt="">
+    <img src="./Photos/chatw-removebg-preview.png" alt="">
 </div>
     <div class="box2">
         <div class="home"><a href="">Home Delivery in</a></div>
         <div class="hrs"><a href="">24 to 48 hours</a></div>
-        <div class="deliver"><img src="../Photos/deliv-removebg-preview.png" alt=""></div>
+        <div class="deliver"><img src="./Photos/deliv-removebg-preview.png" alt=""></div>
     </div>
 </div>
 <div class="know">
-    <img src="../Photos/know.png" alt="">
+    <img src="./Photos/know.png" alt="">
 </div>
 
 <section class="footer">
