--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
     <section class="section2">
         <div class="box1" id="box1">
             <span class="helenatodpic">
-                <img src="../logos/helenatod.png" alt="error">
+                <img src="./logos/helenatod.png" alt="error">
             </span>
             <span class="../helenatodtext">Hellena Tod</span>
             <span class="../helenatodtext2">73 years, Female</span>
@@ -55,10 +55,10 @@
                     <pre style="position: relative;top: 20px;left: 15px;">Recent appointments</pre>
                     <span class="outerboxofgeneralcheckup" style="display: flex; flex-direction: row; position: relative;left: 10px;"><img src="logos/dentist.png" alt="error" width="50px" height="50px" style="z-index: 1; position: relative;bottom: 5px;" >
                         <pre style="border: 0px solid black;border-radius: 10px;padding-top: 4px; width: 410px;height: 45px; position: relative;top: 0px; background-color: rgba(243, 248, 253); font-size: 20px; z-index: 0;left: -38px;">      Dentist                                           Aug 20  </pre></span>
-                        <span class="btn"><img src="../logos/bookappointment.png" alt="error"><button>BOOK YOUR APPOINTMENT</button></span>
+                        <span class="btn"><img src="./logos/bookappointment.png" alt="error"><button>BOOK YOUR APPOINTMENT</button></span>
                         
         </div>
-        <div class="box3" id="box3" style="height: 449px; width: 449px;"><img src="../logos/yourmedicines.png" style="    width: 449px;
+        <div class="box3" id="box3" style="height: 449px; width: 449px;"><img src="./logos/yourmedicines.png" style="    width: 449px;
             height: 449px;
             border-radius: 20px;" alt="error"></div>
         
