--- a/appointment.html
+++ b/appointment.html
@@ -89,7 +89,7 @@
     <tr>
         <td>
             <div class="square" data-category="General Practitioner" data-id="General Practitioner">
-                <a href="#direct"><img src="../Photos/1st.png" alt="Image 1"></a>
+                <a href="#direct"><img src="./Photos/1st.png" alt="Image 1"></a>
                 <h3>Dunton Pitt</h3>
                 <p>General Practitioner</p>
                 <h5>Delhi</h5>
@@ -97,7 +97,7 @@
         </td>
         <td>
             <div class="square" data-category="Dentistry" data-id="Dentistry">
-                <a href="#direct"><img src="../Photos/2nd.png" alt="Image 2"></a>
+                <a href="#direct"><img src="./Photos/2nd.png" alt="Image 2"></a>
                 <h3>Mary Weather</h3>
                 <p>Dentistry</p>
                 <h5>Noida</h5>
@@ -105,7 +105,7 @@
         </td>
         <td>
             <div class="square" data-category="Neurology" data-id="Neurology">
-                <a href="#direct"><img src="../Photos/3rd.png" alt="Image 3"></a>
+                <a href="#direct"><img src="./Photos/3rd.png" alt="Image 3"></a>
                 <h3>Jacob Abel</h3>
                 <p> Neurology</p>
                 <h5>Gurgaon</h5>
@@ -115,7 +115,7 @@
     <tr>
         <td>
             <div class="square" data-category="X-Ray" data-id="X-Ray">
-                <a href="#direct"><img src="../Photos/4th.png" alt="Image 4"></a>
+                <a href="#direct"><img src="./Photos/4th.png" alt="Image 4"></a>
                 <h3>Gill Hames</h3>
                 <p>X-Ray</p>
                 <h5>Noida</h5>
@@ -123,7 +123,7 @@
         </td>
         <td>
             <div class="square" data-category="Dermatology" data-id="Dermatology">
-                <a href="#direct"><img src="../Photos/5th.png" alt="Image 5"></a>
+                <a href="#direct"><img src="./Photos/5th.png" alt="Image 5"></a>
                 <h3>Finn McDonald</h3>
                 <p>Dermatology</p>
                 <h5>Gurgaon</h5>
@@ -131,7 +131,7 @@
         </td>
         <td>
             <div class="square" data-category="Prosthodontics" data-id="Prosthodontics">
-                <a href="#direct"> <img src="../Photos/6th.png" alt="Image 6"></a> 
+                <a href="#direct"> <img src="./Photos/6th.png" alt="Image 6"></a> 
                 <h3>Donna Summer</h3>
                 <p>Prosthodontics</p>
                 <h5>East Delhi</h5>
@@ -141,7 +141,7 @@
     <tr>
         <td>
             <div class="square" data-category="Psychiatry" data-id="Psychiatry">
-                <a href="#direct"><img src="../Photos/7th.png" alt="Image 7"></a>
+                <a href="#direct"><img src="./Photos/7th.png" alt="Image 7"></a>
                 <h3>Dagmar McLean</h3>
                 <p>Psychiatry</p>
                 <h5>West Delhi</h5>
@@ -149,7 +149,7 @@
         </td>
         <td>
             <div class="square" data-category="Urology" data-id="Urology">
-                <a href="#direct"><img src="../Photos/8th.png" alt="Image 8"></a>
+                <a href="#direct"><img src="./Photos/8th.png" alt="Image 8"></a>
                 <h3>Richard Kicker</h3>
                 <p>Urology</p>
                 <h5>Noida</h5>
@@ -157,7 +157,7 @@
         </td>
         <td>
             <div class="square" data-category="Dermatology" data-id="Dermatology">
-                <a href="#direct"><img src="../Photos/9th.png" alt="Image 9"></a>
+                <a href="#direct"><img src="./Photos/9th.png" alt="Image 9"></a>
                 <h3>Millie Billie</h3>
                 <p>Dermatology</p>
                 <h5>Noida</h5>
